# re202-access-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  schema_commit_msg.txt
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: sysex-notes.md
re202/: Cargo.toml
re202-core/: Cargo.toml
re202-core/examples/: library_tour.rs
re202-core/src/: address.rs  codec.rs  inbound.rs  lib.rs  memory.rs  schema.rs  sysex.rs  system.rs  yaml.rs
re202-core/tests/: fixtures_round_trip.rs  typed_round_trip.rs
re202-core/tests/fixtures/: README.md  edit_buffer_mirrors_memory2.syx  memory_001_dump.syx  memory_002_dump.syx  memory_127_dump.syx  memory_manual_dump.syx  system_full-dump_defaultish.syx  system_input-source_guitar.syx
re202-wasm/: Cargo.toml
re202-wasm/src/: lib.rs
re202/src/: cli.rs  main.rs  midi.rs  yaml_io.rs
schemas/: re202-memory.schema.json  re202-system.schema.json
tools/explore/: README.md  capture.py  probe.py  probe_current_memory.py  probe_current_memory_sweep.py  settle_open_questions.py  sweep_addresses.py
