[workspace]
resolver = "2"
members = ["re202-core", "re202", "re202-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ragb/re202-access-rs"
description = "BOSS RE-202 Space Echo SysEx codec, CLI, and WASM bindings."

[workspace.dependencies]
re202-core = { path = "re202-core" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
midir = "0.10"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
schemars = "0.8"

[profile.release]
lto = "thin"
strip = true
